# Distributed_computing

./: README.md
Labs/Romanetskiy/lab_1/: Cargo.toml  Lab_1_Romanetskiy.docx  readme.md
Labs/Romanetskiy/lab_1/src/: main.rs
Labs/Romanetskiy/lab_2/: Cargo.toml  Lab_2_Romanetskiy.docx
Labs/Romanetskiy/lab_2/src/: main.rs
Labs/Romanetskiy/lab_3/: Cargo.toml  Lab_3_Romanetskiy.docx
Labs/Romanetskiy/lab_3/benches/: criterion_benchmark.rs
Labs/Romanetskiy/lab_3/src/: integration.rs  main.rs
Labs/Romanetskiy/lab_4/: 1.py  Cargo.toml  Lab_4_Romanetskiy.docx
Labs/Romanetskiy/lab_4/benches/: criterion_benchmark.rs
Labs/Romanetskiy/lab_4/src/: main.rs
Labs/Romanetskiy/lab_5/: Cargo.toml  Lab_5_Romanetskiy.docx
Labs/Romanetskiy/lab_5/src/: main.rs
Labs/Romanetskiy/lab_6/: Cargo.toml  Lab_6_Romanetskiy.docx  test_dict.txt  words.txt
Labs/Romanetskiy/lab_6/src/: main.rs
Labs/Shapovalov/lab_1/: Cargo.toml  Шаповалов ЛАБ 1.docx
Labs/Shapovalov/lab_1/src/: main.rs
Labs/Shapovalov/lab_2/: Шаповалов ЛАБ 2.docx
Labs/Shapovalov/lab_2/src/: main.rs
Labs/Shapovalov/lab_3/: Cargo.toml  Шаповалов ЛАБ 3.docx
Labs/Shapovalov/lab_3/benches/: criterion_benchmark.rs
Labs/Shapovalov/lab_3/src/: integration.rs  main.rs
Labs/Shapovalov/lab_4/: Шаповалов ЛАБ 4.docx
Labs/Shapovalov/lab_4/src/: main.rs
Labs/Shapovalov/lab_5/: Шаповалов ЛАБ 5.docx
Labs/Shapovalov/lab_5/src/: main.rs
Labs/Shapovalov/lab_6/: Cargo.toml  Шаповалов ЛАБ 6.docx
Labs/Shapovalov/lab_6/src/: main.rs
