[package]
name = "lab_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
thread-priority = "0.13.1"
lazy_static = "1.4.0"
glib = "0.10.3"
winapi = "0.3"
egui = "0.15"
eframe = "0.15"
